@@ -7,6 +7,9 @@ plugin.tx_selftest {
 		# cat=plugin.tx_selftest/file; type=string; label=Path to template layouts (FE)
 		layoutRootPath = EXT:selftest/Resources/Private/Layouts/
 	}
+	settings {
+		disableLoadingOfJQueryLibrary = 0
+	}	
 	persistence {
 		# cat=plugin.tx_selftest//a; type=string; label=Default storage PID
 		storagePid =
