@@ -1,3 +1,7 @@
+2014-03-17 version 1.3.2 Florian Mast <flo.mast@web.de>
+	changed SelftestFlexfomr.xml, locallang_db.xlf, SelftestContreller.php, Configuration/TypoScript/setup.txt and constants.txt
+	added Options for not loading jQuery library on the plugin page
+	
 2014-03-03 version 1.3.1 Florian Mast <flo.mast@web.de>
 	added condition in fluid if image is not inserted in resultoption
 
